# khana

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  setup.sh
cli/: pyproject.toml
cli/food_tracker/: db.py  main.py  models.py  photo_utils.py
cli/food_tracker/commands/: catalog.py  goal.py  meal.py  pantry.py
cli/logs/: catalog.sh  groceries.sh  w11.sh  wf_apr01.sh
cli/scripts/: seed_catalog.py
cli/tests/: conftest.py  test_catalog.py  test_goal.py  test_meal.py  test_models.py  test_pantry.py
dashboard/: .gitignore  index.html  package-lock.json  package.json  relay.config.json  schema.graphql  vite.config.ts
dashboard/src/: App.tsx  DateRangeContext.tsx  RelayEnvironment.ts  index.css  main.tsx
dashboard/src/components/: ColumnSelector.tsx  DailyMacroChart.tsx  MacroBar.tsx  MacroDonut.tsx  MealCard.tsx
dashboard/src/views/: CatalogView.tsx  GoalsView.tsx  HomeView.tsx  MealsView.tsx  PantryView.tsx  TrendsView.tsx
dashboard/src/views/__generated__/: CatalogViewQuery.graphql.ts  GoalsViewQuery.graphql.ts  HomeViewQuery.graphql.ts  MealsViewQuery.graphql.ts  PantryViewQuery.graphql.ts  TrendsViewQuery.graphql.ts
docs/: CNAME  index.html
server/: .env.example  .gitignore  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: index.ts  relay.ts  schema.ts  test-utils.ts
server/src/resolvers/: catalog.ts  goals.ts  index.ts  meals.ts  pantry.ts
server/tests/: goals.test.ts  meals.test.ts  pantry.test.ts
