[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khana"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "typer[testing]>=0.12.0"]

[project.scripts]
khana = "food_tracker.main:app"

[tool.hatch.build.targets.wheel]
packages = ["food_tracker"]
